# GhostLink

./: README.md  pyproject.toml  requirements.txt
ghostlink/webapp/: app.py
ghostlink/webapp/static/: main.js  style.css
ghostlink/webapp/templates/: index.html
scripts/: install.ps1  install.py
tests/: test_webapp.py
