[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostlink"
version = "0.1.0"
description = "Stealth audio encoder for embedding structured text in music (GibberLink protocol)"
readme = "README.md"
authors = [{name = "GhostLink Contributors"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.116.1",
    "jinja2==3.1.6",
    "mido==1.3.3",
    "python-multipart==0.0.20",
    "uvicorn==0.35.0",
    "httpx==0.28.1",
]

[project.scripts]
ghostlink = "ghostlink.__main__:main"
ghostlink-decode = "ghostlink.decoder:main"
ghostlink-web = "ghostlink.webapp.app:main"
